--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,10 @@ authors = ["Froghub <f@froghub.io>"]
 repository = "https://github.com/froghub-io/ic-sqlite.git"
 
 [dependencies]
-ic-cdk = "0.6.8"
+ic-cdk = "0.18.2-alpha.1"
 lazy_static = "1.2"
 sqlite-vfs = { package = "sqlite-vfs-ic", version = "0.2" }
-rusqlite = { package = "rusqlite-ic", version = "0.28", features = ["bundled", "serde_json"]}
+rusqlite = { package = "rusqlite-ic", version = "0.28", features = [
+  "bundled",
+  "serde_json",
+] }
